samples/_failures_safe/1761139124_241155_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c256e776.c: In function ‘main’:
./samples/SAFE/__tmp_c256e776.c:137:12: error: missing terminating " character
  137 |     printf("Enter input string (max %d
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c256e776.c:137:5: error: expected expression at end of input
  137 |     printf("Enter input string (max %d
      |     ^~~~~~
./samples/SAFE/__tmp_c256e776.c:137:5: error: expected declaration or statement at end of input
